# Argo

./: .gitignore  CMakeLists.txt  license.txt  readme.md  tasks.py
cmake/: reflection.hpp.in  version.hpp.in
data/: argo.xcf  demo.ttyrec  test_help_advanced_posix.txt  test_help_basic_posix.txt  test_responsefile_integration.rsp  test_responsefile_parsing.rsp
docker/: centos-7-5_gcc-4-8-5.dockerfile  debian-8-11_gcc-4-9-2.dockerfile  run.sh  tasks.py  ubuntu-14-04_gcc-4-8-4.dockerfile  ubuntu-16-04_gcc-5-4-0.dockerfile  ubuntu-18-04_gcc-7-3-0.dockerfile  ubuntu-18-10_gcc-8-2-0.dockerfile
docs/: .gitignore  .pdsite.yml  00_index.md  01_installation.md  02_basic_usage.md  03_api.md  10_license.md  Doxyfile  tasks.py
examples/: 00_argument_types.cpp  00_basic.cpp  CMakeLists.txt
single_include/argo/: Argo.hpp
test/argo/test/: Arguments_tests.cpp  FileComparison.hpp  ResponseFile_tests.cpp  utility.hpp
